--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 718px) {
     .menu {
       display: none;
       flex-direction: column;
@@ -15,4 +15,41 @@
     .menu-icon {
       display: block;
     }
+    .selector{
+      flex-direction: column;
+      display: grid;
+      grid-template-columns: repeat(1fr);
+      gap: 10px;
+      justify-content: center;
+    }
+    .tour{
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+    .card-container,
+    .place,
+    .news {
+      display: grid;
+      padding-top: 10px;
+      grid-template-columns: 1fr;
+    }
+    .card-3{
+      margin-left: 0;
+    }
+    .card-deal, 
+    .card-deal-1{
+      width: 718px;
+    }
+    .card-content, 
+    .card-content-1{
+      margin-left: 10px;
+    }
+    .discound{
+      margin-left: 21em;
+      margin-top: 40.5em;
+    }
+    footer{
+      max-width: 714px;
+    }
+
   }
