--- a/styles/style.css
+++ b/styles/style.css
@@ -604,3 +604,53 @@ footer {
     padding-top: 5em;
     text-align: center;
 }
+ 
+/* here is  hover styles */
+
+.selector:hover{
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out;
+}
+
+.praimary-btn:hover{
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out;
+}
+.praimary-btn-2:hover{
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out;
+}
+.image-item:hover{
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out;
+}
+.card-1:hover{
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out;
+}
+.card-2:hover{
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out;
+}
+.card-3:hover{
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out;
+}
+.card-content:hover{
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out;
+}
+.card-content-1:hover{
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out;
+}
+#btn:hover{
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+}
+.menu a:hover{
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+    box-shadow: #5A5A5D 0 2px 2px 0;
+    border-radius: 8px;
+}
